--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.3"
+    "aos": "^2.3.4",
+    "astro": "^5.12.3",
+    "bootstrap": "^5.3.7"
   }
 }
